vlib/v/parser/tests/embed_file_as_nested_branch_result_with_select_condition.out
vlib/v/parser/tests/embed_file_as_nested_branch_result_with_select_condition.vv:52:9: error: undefined ident: `missing_symbol`
   50 |     assert selected_if == 1
   51 |     assert selected_match == 1
   52 |     sink = missing_symbol
      |            ~~~~~~~~~~~~~~
   53 | }
